# mcp-datasus

./: .env.example  .gitignore  Dockerfile  README.md  agente.py  analisar_critica.py  avaliar_rag.py  busca_hibrida.py  cnes_client.py  consulta_manual.py  docker-compose.yml  extrair_manual.py  indexar_manual.py  mapear_criticas.py  mcp_server.py  pyproject.toml  s3_client.py  setup.sh  sigtap_client.py  validar_critica.py  validar_resposta.py
data/: mapeamento_criticas_manual.json
scripts/: agente.py  avaliar_rag.py  indexar_manual.py  mapear_criticas.py
src/manual_sih_rag/: config.py
src/manual_sih_rag/criticas/: __init__.py  analisar.py  paths.py  validar.py
src/manual_sih_rag/datasus/: __init__.py  base_resource.py  cache.py  client.py  connection.py  metrics.py  schemas.py
src/manual_sih_rag/datasus/cnes/: namespace.py  resources.py  types.py
src/manual_sih_rag/datasus/sigtap/: namespace.py  resources.py  types.py
src/manual_sih_rag/extraction/: __init__.py  format_handlers.py  pdf_extractor.py
src/manual_sih_rag/legacy/: __init__.py  cnes_client.py  s3_client.py  sigtap_client.py
src/manual_sih_rag/rag/: __init__.py  aih_parser.py  engine.py  hints.py  hybrid_search.py  paths.py  search_primitives.py
src/manual_sih_rag/shared/: errors.py  log.py  normalize.py
src/manual_sih_rag/tools/: __init__.py  auditoria_aih_tools.py  auditoria_tools.py  cnes_tools.py  health_tools.py  inteligencia_tools.py  legacy_tools.py  rag_tools.py  sigtap_tools.py
src/manual_sih_rag/validation/: __init__.py  validar_resposta.py
tests/: conftest.py  test_config.py  test_connection.py  test_formatar.py  test_norm_proc.py  test_search_primitives.py
